--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,10 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=
+
+
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_SERVER_KEY=
+MIDTRANS_IS_PRODUCTION=
+MIDTRANS_IS_SANITIZED=
+MIDTRANS_IS_3DS=
